# robot-operating-system

./: .gitattributes  README.md
Docs/: ros-basics.txt  ros-commands.txt  rospy-commands.txt
Docs/ROS1/: rospy-commands.txt
Docs/ROS2/: ros-basics.txt  ros-commands.txt
Docs/ROS2/Workspaces/cpp_ws/install/: local_setup.sh  setup.sh
Docs/ROS2/Workspaces/cpp_ws/install/cpp_service/lib/cpp_service/: cpp_cli_polar  cpp_ser_polar
Docs/ROS2/Workspaces/cpp_ws/install/cpp_service/share/cpp_service/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Docs/ROS2/Workspaces/cpp_ws/src/cpp_service/: CMakeLists.txt  package.xml
Docs/ROS2/Workspaces/cpp_ws/src/cpp_service/src/: cpp_ser_polar.cpp
Docs/ROS2/Workspaces/ros2_cpp_ws/install/: local_setup.sh  setup.sh
Docs/ROS2/Workspaces/ros2_cpp_ws/install/my_cpp_pkg/lib/my_cpp_pkg/: pub_node
Docs/ROS2/Workspaces/ros2_cpp_ws/install/my_cpp_pkg/share/my_cpp_pkg/: package.sh  package.zsh
Docs/ROS2/Workspaces/ros2_cpp_ws/log/: latest_build
Docs/ROS2/Workspaces/ros2_cpp_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
Docs/ROS2/Workspaces/ros2_cpp_ws/src/my_cpp_pkg/src/: pub_node.cpp  sub_node.cpp
Docs/ROS2/Workspaces/ros2_py_ws/install/: local_setup.sh  setup.sh
Docs/ROS2/Workspaces/ros2_py_ws/install/my_py_pkg/lib/my_py_pkg/: pub_node  sub_node
Docs/ROS2/Workspaces/ros2_py_ws/install/my_py_pkg/share/my_py_pkg/: package.sh
Docs/ROS2/Workspaces/ros2_py_ws/src/my_py_pkg/: package.xml  setup.py
Docsy/ROS1/: ros-commands.txt
Docsy/ROS2/: ros-basics.txt  ros-commands.txt
(+3 files in other folders)
